fixing some layout issues

--- a/dna/lists.less
+++ b/dna/lists.less
@@ -5,57 +5,47 @@
 	LISTS
 **********/
 ul,
-ol
-{
+ol {
 	margin: 0;
 	padding: 0 0 1em 1em;
 }
 // UNORDERED LISTS
-.disc
-{
+.disc {
 	list-style: disc;
 }
-.circle
-{
+.circle {
 	list-style: circle
 }
-.square
-{
+.square {
 	list-style: square;
 }
 
 // ORDERED LISTS
-.decimal
-{
+.decimal {
 	list-style: decimal;	
 }
-.lower-alpha
-{
+.lower-alpha {
 	list-style: lower-alpha;	
 }
-.upper-alpha
-{
+.upper-alpha {
 	list-style: upper-alpha;	
 }
-.lower-roman
-{
+.lower-roman {
 	list-style: lower-roman;	
 }
-.upper-roman
-{
+.upper-roman {
 	list-style: upper-roman;	
 }
 
 // DEFINITION List
-dl
-{
+dl {
 	margin: 0;
 	padding: 0 0 1em;
 }
-dt
-{}
-dd
-{
+dt {
+
+}
+dd {
 	padding: 0 0 .125em 2em;
 	margin: 0;
 }
