--- a/dna/tables.less
+++ b/dna/tables.less
@@ -5,32 +5,27 @@
 	TABLES
 **********/
 
-table 
-{
+table {
 	border-collapse: separate;
 	border-spacing: 0;
 	border: 1px solid @med-gray1;
 	border-radius: @radius-sm;
 }
-thead tr
-{
+thead tr {
 	background-color: @lt-gray2;
 	border-radius: @radius-lg  @radius-lg 0 0;
 }
-th 
-{
+th {
 	font-weight: bold;
 	padding: 10px 20px;
 	text-align: left;
 	border-left: 1px solid @med-gray1;
 }
-td 
-{
+td {
 	padding: 10px 20px;
 	border-left: 1px solid @med-gray1;
 }
 th:first-child,
-td:first-child
-{
+td:first-child {
 	border-left: none;
 }
